# AI-400

./: .gitignore  README.md
01_CKAD_Basic_of_Pods/: commands_imperative_style.md
01_learn-skill/: frontend-engineer.md
01_learn-skill/hello-fastapi/: main.py  pyproject.toml  test_main.py
02_FastAPI_Pytest_Intro/: Fastapi For Agents.md  main.py  pyproject.toml
04_Dependency_Injection_SQLModel_Environment_Config/: main.py  pyproject.toml
07_8_Containerzing_Application_with_docker/: Docker For Ai Services.md  README.md
100_CKAD_hardworking/: Dockerfile  Dockerfile:HRU  labs.yaml  multi-container-pod.yaml
10_Multi_stage_containers/: CLAUDE.md  docker-compose.yaml  text.txt
11_Hello_kubernetes/: Kubernetes For Ai Services.md  commands.md  index.html  namespace.md  namespace.tldr
12_kubernetes_RBAC/: RBAC-debugging-guide.md  can-i.md  commands.md  k8s-rolebindings-notes.jsx  kubernetes-rbac-debug.md  kubernetes-rbac-notes.md  nginx-pods.yaml  prompt.md  role.manpages.txt  role.yaml  role2.yaml  roleCreation.yaml  rolebinding.subjects.apiGroup.md  rolebindingCreation.yaml  rolebindings.yaml  serviceAccountCreation.yaml  (+1 more)
Projects/04_Agentic_Todo_Manager/llm-call/: Dockerfile  main.py  pyproject.toml
Projects/04_Agentic_Todo_Manager/llm-call/Skills/kubernetes-educator/: SKILL.md  advanced-topics.md  architecture.md  kubectl-commands.md  objects-reference.md  yaml-anatomy.md
Projects/04_Agentic_Todo_Manager/llm-call/Skills/universal-planner/: SKILL.md
Projects/04_Agentic_Todo_Manager/llm-call/Skills/universal-planner/references/: event-planning.md  learning-roadmap.md  personal-productivity.md  software-project.md
learn-skill/professional-fastapi-programmer/assets/starter-template/: pyproject.toml
(+252 files in other folders)
